# statistics_homework

./: .gitignore  Dockerfile  README.md  pyproject.toml
analyze_boat_race/: analysis.ipynb  boat-race.csv  make_csv.py
scraping/: scrape_base_url.py
